add unexpected loss

--- a/example.ipynb
+++ b/example.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,8 @@
     "        (\"LR_PF\", ctypes.POINTER(ctypes.c_float)),\n",
     "        (\"exact_EL\", ctypes.c_float),\n",
     "        (\"EL\", ctypes.c_float),\n",
+    "        (\"exact_UL\", ctypes.c_float),\n",
+    "        (\"UL\", ctypes.c_float),\n",
     "        (\"portfolio_size\", ctypes.c_size_t),\n",
     "        (\"n_sims\", ctypes.c_size_t)\n",
     "    ]\n",
@@ -85,17 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 simulations took 41.54 ms\n",
+      "10000 simulations took 40.55 ms\n",
       "path: ./example_portfolio.csv\n",
       "exact EL: 928200.00 €\n",
       "EL: 933600.00 €\n",
+      "exact UL: 2355868.00 €\n",
+      "UL: 3139344.75 €\n",
       "portfolio_size: 80\n"
      ]
     }
@@ -110,12 +114,14 @@
     "print(f\"path: {PATH}\")\n",
     "print(f\"exact EL: {result.exact_EL:.2f} €\")\n",
     "print(f\"EL: {result.EL:.2f} €\")\n",
+    "print(f\"exact UL: {result.exact_UL:.2f} €\")\n",
+    "print(f\"UL: {result.UL:.2f} €\")\n",
     "print(f\"portfolio_size: {result.portfolio_size}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +146,13 @@
     "ax.set_xlabel(\"L_PF\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
