add more metrics

--- a/example.ipynb
+++ b/example.ipynb
@@ -11,14 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH = \"./example_portfolio.csv\"\n",
     "RHO = 0.2\n",
     "N_SIMS = 10_000\n",
-    "SEED = 79"
+    "SEED = 79\n",
+    "q = 0.999"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 simulations took 40.55 ms\n",
+      "10000 simulations took 62.85 ms\n",
       "path: ./example_portfolio.csv\n",
       "exact EL: 928200.00 €\n",
       "EL: 933600.00 €\n",
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +146,48 @@
     "ax.bar(names, rel_amount)\n",
     "ax.set_xlabel(\"L_PF\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "table\n",
+      "0.0 88.58\n",
+      "6000000.0 97.27\n",
+      "12000000.0 99.22\n",
+      "18000000.0 99.72999999999999\n",
+      "24000000.0 99.86\n",
+      "30000000.0 99.90999999999998\n",
+      "36000000.0 99.94999999999999\n",
+      "42000000.0 99.96999999999998\n",
+      "48000000.0 99.98999999999998\n",
+      "78000000.0 99.99999999999997\n",
+      "\n",
+      "VaR=30000000.0\n",
+      "EC=29066400.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "VaR = None\n",
+    "\n",
+    "print(\"table\")\n",
+    "for bin, p in zip(x, np.cumsum(rel_amount)):\n",
+    "    print(bin, p*100)\n",
+    "    if p >= q and VaR is None:\n",
+    "        VaR = bin\n",
+    "\n",
+    "EC = VaR - result.EL\n",
+    "\n",
+    "print()\n",
+    "print(f\"{VaR=}\")\n",
+    "print(f\"EC={EC}\")"
    ]
   },
   {
